src/objects/MT_MediaCampaignType__c.object
<CustomObject>
    <fields>
        <fullName>MT_Asset_ref__c</fullName>
        <label>Asset</label>
        <referenceTo>P7S1_Asset__c</referenceTo>
        <relationshipLabel>Media Campaign Types</relationshipLabel>
        <relationshipName>Media_Campaign_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_BMV_SourceField__c</fullName>
        <label>BMV Kennzahlen Standard</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MB1</fullName>
                    <default>true</default>
                    <label>MB1</label>
                </value>
                <value>
                    <fullName>MB3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MT_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Campaign Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MT_IsActive__c</columns>
        <columns>MT_Asset_ref__c</columns>
        <columns>MT_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Media Campaign Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Campaign Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>